--- a/package.yaml
+++ b/package.yaml
@@ -27,6 +27,7 @@ dependencies:
 - lens >= 4.18
 - mtl >= 2 && < 3
 - containers >= 0.6 && < 0.7
+- directory >= 1.3 && < 2
 
 library:
   source-dirs:
