--- a/package.yaml
+++ b/package.yaml
@@ -28,10 +28,12 @@ dependencies:
 - mtl >= 2 && < 3
 - containers >= 0.6 && < 0.7
 - directory >= 1.3 && < 2
+- inline-c >= 0.9 && < 1
+- inline-c-cpp >= 0.4 && < 0.5
 
 library:
   source-dirs:
-  - src 
+  - src
   - clib
   cxx-options: -std=c++17
   include-dirs: clib/headers
