--- a/package.yaml
+++ b/package.yaml
@@ -28,8 +28,11 @@ dependencies:
 - mtl >= 2 && < 3
 - containers >= 0.6 && < 0.7
 - directory >= 1.3 && < 2
-- inline-c >= 0.9 && < 1
-- inline-c-cpp >= 0.4 && < 0.5
+- inline-c >= 0.9.1 && < 1
+- inline-c-cpp >= 0.4.0.2 && < 0.5
+- vector
+- template-haskell >= 2.15
+- comonad >= 5
 
 library:
   source-dirs:
@@ -38,7 +41,6 @@ library:
   cxx-options: -std=c++17
   include-dirs: clib/headers
   default-extensions: CPP
-  c-sources: clib/libtorrent_exports.cpp
   extra-libraries:
   - stdc++
   - torrent-rasterbar
