Updated to libtorrent 2.0.
This is not a stable commit, but it seems to work pretty well.

--- a/package.yaml
+++ b/package.yaml
@@ -43,8 +43,8 @@ library:
   default-extensions: CPP
   extra-libraries:
   - stdc++
-  - torrent-rasterbar
   - torrent
+  - try_signal
 
 executables:
   TorrentFuse-exe:
