--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Create build environment
         uses: .github/include
-        id: actions/create-builder-image
+        id: create-builder-image
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
