--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Create build environment
-        uses: ./.github/include
-        id: create-builder-image
+        uses: ./.github/include/create-builder-image/
+        id: builder-image
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
