--- a/package.yaml
+++ b/package.yaml
@@ -25,6 +25,7 @@ dependencies:
 - filepath >= 1.4
 - lens >= 4.18
 - mtl >= 2 && < 3
+- stm >= 2.5
 - containers >= 0.6 && < 0.9
 - directory >= 1.3 && < 2
 - inline-c >= 0.9.1 && < 1
