--- a/package.yaml
+++ b/package.yaml
@@ -19,21 +19,23 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/githubuser/TorrentFuse#readme>
 
 dependencies:
+- aeson >= 2.2
 - base >= 4.7 && < 5
 - bytestring >= 0.10
-- unix >= 2 && < 3
+- containers >= 0.6 && < 0.9
+- data-default
+- directory >= 1.3 && < 2
 - filepath >= 1.4
+- ghc-prim
+- inline-c >= 0.9.1.10 && < 1
+- inline-c-cpp >= 0.4.0.2 && < 0.6
 - lens >= 4.18
 - mtl >= 2 && < 3
-- stm >= 2.5
-- containers >= 0.6 && < 0.9
-- directory >= 1.3 && < 2
-- inline-c >= 0.9.1 && < 1
-- inline-c-cpp >= 0.4.0.2 && < 0.6
-- vector
-- template-haskell >= 2.15
 - optparse-applicative >= 0.18
-- aeson >= 2.2
+- stm >= 2.5
+- template-haskell >= 2.15
+- unix >= 2 && < 3
+- vector
 
 library:
   source-dirs:
@@ -42,8 +44,9 @@ library:
   cxx-options: -std=c++17
   include-dirs: clib/headers
   default-extensions: CPP
-  # ghc-options:
-  # - -Wall
+  ghc-options:
+  - -haddock
+    # - -Wall
   extra-libraries:
   - stdc++
   - torrent-rasterbar
@@ -59,6 +62,7 @@ executables:
     - -with-rtsopts=-N
     - -g2
     - -Wall
+    - -haddock
     dependencies:
     - TorrentFuse
     - HFuse >= 0.2.5 && < 0.3
